# pakku.js

./: .gitattributes  .gitignore  .travis.yml  BUILD.txt  BUILD_FIREFOX.txt  Gruntfile.js  LICENSE.txt  README.md  background.js  edit_distance.js  issue_template.md  manifest.json  package.json  sync_doc_typedef.py  tsconfig.json  vite.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: node.js.yml
bas-enabler/: README.md  bg.js  inject.js  manifest.json
core/: background.html  background.js  core.js  edit_distance.js  utils.js
mobile-proxy/: README.md  emilia.js  emilia_original.js  package.json  proxy.js  proxy.pac  settings.js
mobile-proxy/cert/: bilibili.cert.conf  gen_cert.sh
moz-build/: mozilla_fucker.py
options/: options.html  options.js
pakkujs/: LICENSE.txt  manifest.json  process-env.d.ts
pakkujs/assets/: danmu_update_blocker.json  enable_h5_player.js  panel.js  pinyin_dict.min.js  script_injector.for-firefox.js  script_injector.js  similarity-gen.wasm  xhr_hook.js  xhr_hook_injector.js
pakkujs/background/: background.ts  compressor.ts  config.ts  config_migration.ts  danmu_update_blocker.ts  permission_check.ts  state.ts
pakkujs/content_script/: main.ts  sandboxed.ts  xhr_hook.ts
pakkujs/core/: background.for-firefox.html  background.html  background.js  combine.ts  combine_worker.ts  config.js  content_script.for-firefox.js  content_script.js  core.js  crc32-crack.js  edit_distance.js  (+17 more)
pakkujs/similarity/repo-cpp/: CMakeLists.txt  pre.js
pakkujs/similarity/repo-cpp/src/: main.cpp  pinyin_dict.cpp  pinyin_dict.txt
pakkujs_public/: manifest.json
popup/: popup.html  popup.js
proto_translation/: bili-proto.json  demo.html  proto-bili-gen.d.ts  proto-bili-gen.js  transform_to_module.bat  view
test/: test_main.py  testrunner.py
userscript_docs/: README.md  example_histogram.user.js
(+95 files in other folders)
